# terrapin-dx

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md
assets/: webauthn.js
src/: bulma.rs  main.rs  server.rs
src/api/: auth.rs  authentication.rs  mod.rs  registration.rs  session.rs
src/api/ecs/: mod.rs
src/backend/: auth.rs  mod.rs  passkey.rs  session.rs
src/components/: error.rs  mod.rs  pill.rs  progress.rs  status.rs
src/data/: market.rs  mod.rs  net_worth.rs  ownership.rs  portfolio.rs  term.rs  yf.rs
src/frontend/: mod.rs
src/views/: auth.rs  dev.rs  home.rs  login.rs  mod.rs  navbar.rs  register.rs
src/views/home/: invalid.rs  login.rs  mod.rs  session.rs
src/views/home/session/: holdings.rs  import_prices.rs  lots.rs  mod.rs  net_worth.rs  products.rs  side_menu.rs
