[package]
name = "terrapin-dx"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
webauthn-rs-proto = "0.5"
url = "2.5.8"
uuid = { version = "1.21", features = ["v4", "js", "serde", "rng-getrandom"] }
serde_json = "1.0"
anyhow = "1.0.102"

getrandom = { version = "0.4", features = ["wasm_js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["CredentialsContainer", "PublicKeyCredential", "Window", "Navigator"], optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = " 1", features = ["full"], optional = true }
tower-sessions = { version = "0.15", optional = true }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "web-sys", "js-sys", "wasm-bindgen-futures", "wasm-bindgen", "getrandom"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "axum", "tokio", "tower-sessions", "webauthn-rs"]
